<resources>
    <string name="app_name_shift">Funny Live</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_external_storage">저장소에 접근할수 없습니다.</string>
    <string name="press_back_again_to_exit">앱을 종료하시려면 한번 더 누르십시오.</string>
    <string name="playing_item_bj_name">BJ %1$s</string>
    <string name="playing_item_id_name">ID: %1$s</string>
    <string name="view_profile">프로필보기</string>
    <string name="loadding_text">자료로딩중...</string>
    <string name="no_datas">현재 방영중인 데이터가 없습니다!</string>
    <string name="logo_string">10초동안 시청하기, 방송하기선택이 없을경우, 시청하기로 자동 이동됩니다.</string>
    <string name="dialog_to_bj_login_title">BJ로그인>></string>
    <string name="btn_back">뒤로</string>
    <string name="dialog_notice">알 림</string>
    <string name="dialog_broadcast_live_stop_text">방송을 종료하시겠습니까?</string>
    <string name="dialog_broadcast_view_stop_text">방송시청을 종료하시겠습니까?</string>
    <string name="dialog_logout_text">이미 %1$s로 로그인하였습니다. 로그아웃하시겠습니까?</string>
    <string name="dialog_favorite_success">귀하는 BJ %1$s님을 추천하였습니다.</string>
    <string name="dialog_favorite_fail">귀하는 BJ %1$s님을 이미 추천하였으므로 지금 추천하실수 없습니다.</string>
    <string name="dialog_auction_cancel">경매를 취소하겠습니까?</string>
    <string name="operation_failure">서버와 접속이 끊어졌습니다.</string>
    <string name="operation_recommend_failure">미안하지만 지금은 추천하실수 없습니다. 후에 다시 시도해주세요.</string>
    <string name="operation_chat_failure">미안하지만 지금은 채팅조작을 하실수 없습니다. 후에 다시 시도해주세요.</string>
    <string name="operation_chat_dumb">벙어리이므로 채팅불가합니다. 후에 다시 시도해주세요.</string>
    <string name="operation_banana_failure">미안하지만 지금은 바나나를 보낼수 없습니다. 후에 다시 시도해주세요.</string>
    <string name="operation_buy_failure">미안하지만 지금은 바나나를 구입할수 없습니다. 후에 다시 시도해주세요.</string>
    <string name="operation_reloading_failure">미안하지만 망상태와 관련하여 방송을 재로딩합니다.</string>
    <string name="dialog_choco_cnt_error">선물할 쵸코를 보유하고 있는 쵸코수보다 작게 설정하여야 합니다.</string>
    <string name="dialog_choco_cnt_zero">선물할 쵸코수는 1이상이여야 합니다.</string>
    <string name="dialog_choco_bj_name">BJ님을 입력하여야 합니다.</string>
    <string name="dialog_choco_title">선물하기</string>
    <string name="dialog_choco_ques">쵸코란?</string>
    <string name="dialog_choco_answer">시청자가 BJ에게 선물할수있는 유료아이템입니다.</string>
    <string name="dialog_choco_comment">(BJ는 쵸코를 환전하여 실제수익으로 돌려받게 됩니다.)</string>
    <string name="dialog_choco_to_who">선물할 대상</string>
    <string name="dialog_choco_my_cnt">알 보유량</string>
    <string name="dialog_choco_my_cnt_unit">개</string>
    <string name="dialog_choco_send_cnt">선물할 알 개수</string>
    <string name="dialog_choco_btn_buy">쵸코 구매...</string>
    <string name="dialog_choco_btn_send">쵸코 선물하기</string>
    <string name="dialog_choco_send_toast_success">%1$s이 %2$s에게 쵸코 %3$s개를 전송하였습니다.</string>
    <string name="preference_cocotving">com_cocotving_app</string>
    <string name="pref_userid">coco_userid</string>
    <string name="pref_password">coco_password</string>
    <string name="login_bj_success">로그인하였습니다.</string>
    <string name="login_failure">로그인 되지 않았습니다.</string>
    <string name="login_block_failure">현재 계정은 블록입니다.</string>
    <string name="login_pending_failure">아직 가입승인이 되지 않았습니다.</string>
    <string name="login_rejected_failure">가입신청이 거절되었습니다.</string>
    <string name="logout_bj_success">로그아웃되었습니다.</string>
    <string name="logout_failure">로그아웃이 실패하였습니다.</string>
    <string name="profile_view_title">내 프로필정보</string>
    <string name="category_game">게임</string>
    <string name="category_life">라이프</string>
    <string name="category_music">뮤직</string>
    <string name="category_adult">Adult</string>
    <string name="category_all">All</string>
    <string name="category_search">Search</string>
    <string name="to_home">홈화면</string>
    <string name="broad_start">방송시작</string>
    <string name="broad_end">방송중지</string>
    <string name="broad_setting">설  정</string>
    <string name="broad_start_toast">%1$s님이 방송을 시작합니다.</string>
    <string name="broad_end_toast">%1$s님이 방송을 중지합니다.</string>
    <string name="warning_search">검색어를 입력하십시오.</string>
    <string-array name="broadcast_theme">
        <item>음악</item>
        <item>게임</item>
        <item>생활</item>
        <item>19금</item>
    </string-array>
    <string-array name="broadcast_num_theme">
        <item>Music</item>
        <item>Game</item>
        <item>Life</item>
        <item>Adult</item>
    </string-array>
    <string-array name="broadcast_quality">
        <item>저화질</item>
        <item>표준</item>
        <item>고화질</item>
    </string-array>
    <string name="app_name">Funny Live</string>
    <string name="app_name_ko">코코티빙</string>
    <string name="member_explore_title">EXPLORE</string>
    <string name="logo_company_name">Powered by funnylive.com</string>
    <string name="login_logo_mark_str">Bring Fashion to Live</string>
    <string name="login_agreement_privacy">다음버튼을 누릅니다.</string>
    <string name="login_agreement">이용약관</string>
    <string name="login_and"> 및 </string>
    <string name="login_privacy">개인정보취급방침</string>
    <string name="login_more">더보기</string>
    <string name="connect_error">웹접속에 문제가 있습니다!</string>
    <string name="dialog_bj_login_title">로그인</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_signup">회원가입</string>
    <string name="btn_confrim">확인</string>
    <string name="btn_login_confrim">가입하기</string>
    <string name="btn_find_id_pw">아이디/비밀번호 찾기</string>
    <string name="dialog_login_username_hint">이름을 입력하세요.</string>
    <string name="dialog_login_userid_hint">아이디를 입력하세요.</string>
    <string name="dialog_login_pw_hint">비밀번호를 입력하세요.</string>
    <string name="dialog_login_pw_retype_hint">비밀번호를 다시 입력하세요.</string>
    <string name="dialog_login_people_no">주민등록번호를 입력하세요</string>
    <string name="user_id">아이디:</string>
    <string name="password">비밀번호:</string>
    <string name="loading_text">잠시만...</string>
    <string name="search_title">검색</string>
    <string name="search_category_detail">더보기</string>
    <string name="category_recom">추천</string>
    <string name="category_new">신규</string>
    <string name="category_best">Best</string>
    <string name="category_near">근처</string>
    <string name="category_nodata">자료없음</string>
    <string name="category_detail_new">NEW</string>
    <string name="category_detail_recom">RECOM</string>
    <string name="category_detail_best">BEST</string>
    <string name="category_detail_near">NEAR</string>
    <string name="broadcast_start">방송하기!</string>
    <string name="broadcast_curber_img">커버사진</string>
    <string name="broadcast_title">방송제목</string>
    <string name="broadcast_category">방송카테고리</string>
    <string name="setting_title">방송제목을 입력하세요.</string>
    <string name="setting_category">방송테마</string>
    <string name="setting_quality">방송화질</string>
    <string name="setting_19">19+방송</string>
    <string name="setting_password">비밀번호</string>
    <string name="setting_choco_cnt">유료방송</string>
    <string name="setting_room_num">방인원수</string>
    <string name="warning_username">이름을 입력하셔야합니다!</string>
    <string name="warning_user_id">아이디를  입력하셔야합니다!</string>
    <string name="warning_people_no">주민등록번호를 입력하세요</string>
    <string name="warning_name_id">이름 또는 아이디를 입력하셔야합니다!</string>
    <string name="warning_same_user_id">아이디가 중복되었습니다.</string>
    <string name="warning_nickname">닉네임을 입력하셔야 합니다!</string>
    <string name="warning_same_nickname">닉네임이 중복되었습니다.</string>
    <string name="warning_phonenumber">휴대폰번호를 입력하셔야 합니다!</string>
    <string name="warning_email">이메일주소를 입력하셔야 합니다!</string>
    <string name="register_sucess">당신의 메일로 인증코드를 전송하였습니다.</string>
    <string name="idpwd_search_error">입력하신 정보들이 옳바르지 않습니다.</string>
    <string name="warning_register">아직 가입이 승인되지 않았습니다.</string>
    <string name="warning_title">방송타이틀을 설정하여야 합니다!</string>
    <string name="warning_pw">비밀번호를 입력하여야 합니다!</string>
    <string name="warning_pw_confirm">비밀번호가 맞지 않습니다.</string>
    <string name="warning_choco_cnt">알개수를 입력하여야 합니다!.</string>
    <string name="warning_room_num">방인원수를 선택하여야 합니다.</string>
    <string name="set_room_password">방의 비밀번호를 설정하세요.</string>
    <string name="set_room_password_again">방의 비밀번호를 한번 더 입력하세요.</string>
    <string name="warning_broadcast">건강한 방송 환경을 위하여 24시간 모니터링중입니다. 흡연, 에로, 노출, 저속한 내용은 제재 대상입니다!</string>
    <string name="warning_broadcast_listener">멤버로 로그인하여야 합니다.</string>
    <string name="view_favorite">추천</string>
    <string name="view_choco">쵸코</string>
    <string name="notice_title">공지목록</string>
    <string name="share_title">공유하기</string>
    <string name="best_pan">Top Fans</string>
    <string name="member_overview">자기 소개</string>
    <string name="user_info_where">위치</string>
    <string name="excharge_into">환전신청</string>
    <string name="excharge_start">신청하기</string>
    <string name="warning_excharge">알개수 1000개이상에서 환전이 가능합니다.</string>
    <string name="warning_max_banana_count">%d 개보다 작게</string>
    <string name="logout">로그아웃</string>
    <string name="action_leave">Leave</string>
    <string name="action_send">Send</string>
    <string name="prompt_everybody_message">모든사람과 채팅</string>
    <string name="prompt_single_message">1:1 채팅</string>
    <string name="str_chat_lock_on">채팅을 잠금니다.</string>
    <string name="str_chat_lock_on_state">채팅잠금상태</string>
    <string name="str_chat_lock_off">채팅을 오픈합니다.</string>
    <string name="connect">챠팅서버와 련결되었습니다.</string>
    <string name="disconnect">챠팅서버와 련결이 끊겼습니다.</string>
    <string name="error_connect">련결실패</string>
    <string name="message_welcome">Welcome to Socket.IO Chat –</string>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">입장하였습니다.</string>
    <string name="message_user_left">퇴장하였습니다.</string>
    <string name="user_action_typing">is typing</string>
    <string name="button_dismiss">접속중 오류</string>
    <string name="status_connecting">로딩중...</string>
    <string name="status_connected">접속되었습니다.</string>
    <string name="status_disconnecting">잠시만...</string>
    <string name="dialog_password_title">암호</string>
    <string name="dialog_password_incorrect">암호가 정확치 않습니다.</string>
    <string name="dialog_request_code_title">인증코드</string>
    <string name="forgot_pass"><u>Forgot Password?</u></string>
    <string name="login">로그인</string>
    <string name="str_oneself_introduce">자기소개</string>
    <string name="str_profile_edit_name">이름</string>
    <string name="str_profile_edit_nickname">닉네임</string>
    <string name="str_profile_edit_id">아이디</string>
    <string name="str_profile_edit_sex">성별</string>
    <string name="str_profile_edit_birthday">생일</string>
    <string name="str_profile_edit_native">고향</string>
    <string name="str_profile_edit_knowledge">학력</string>
    <string name="str_profile_edit_phone">+82</string>
    <string name="str_profile_edit_email">이메일</string>
    <string name="str_profile_edit_people_no">주민등록번호</string>
    <string name="str_profile_edit_name_hint">이름을 입력하기</string>
    <string name="str_profile_edit_nickname_hint">닉네임을 입력하세요.</string>
    <string name="str_profile_edit_native_hint">고향을 입력하기</string>
    <string name="str_profile_edit_id_hint">영문 a~z, A~Z, 수자 0~9의 조합으로 입력하세요.</string>
    <string name="str_profile_edit_oneself_hint">자기소개를 입력하기</string>
    <string name="str_profile_edit_history_hint">자기학력을 입력하기</string>
    <string name="str_profile_edit_phone_hint">휴대폰번호 입력하세요.</string>
    <string name="str_profile_edit_email_hint">이메일을 입력하세요.</string>
    <string name="str_profile_edit_people_no_hint">000000-*******(앞6자리)\n아이디/비밀번호를 찾을 때 이용합니다.</string>
    <string name="sex_male">남자</string>
    <string name="sex_female">여자</string>
    <string name="sex_protect">비밀</string>
    <string name="password_input_hint">암호를 입력하세요.</string>
    <string name="str_register_title">회원가입</string>
    <string name="str_register_idpwd_title">아이디/비밀번호 찾기</string>
</resources>