<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:tools="http://schemas.android.com/tools"
	android:background="@drawable/login_activity_bg"
	tools:context=".app.ui.activity.LoginActivity"
	android:padding="@dimen/padding_login_screen"
	android:orientation="vertical">

	<RelativeLayout
		android:id="@+id/bar"
		style="@style/layout_mw"
		android:layout_width="match_parent"
		android:visibility="invisible">
		<ImageButton
			android:id="@+id/imgBtn_Back"
			android:layout_width="@dimen/btn_profile_height"
			android:layout_height="@dimen/btn_profile_height"
			android:onClick="onButtonClick"
			android:layout_alignParentStart="true"
			android:layout_centerVertical="true"
			android:background="@drawable/ic_arrow_left"
			android:contentDescription="@string/hello_world" />
	</RelativeLayout>

	<ImageView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:src="@drawable/login_logo" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1" />

	<EditText
		android:id="@+id/edit_user_name"
		android:layout_width="match_parent"
		android:layout_height="@dimen/btn_login_height"
		android:background="@drawable/btn_white_round_alpha6"
		android:textColor="@color/text_mb_color"
		android:textSize="@dimen/text_size_12"
		android:gravity="center"
		android:paddingStart="20dp"
		android:paddingEnd="2dp"
		android:lines="1"
		android:inputType="text"
		android:hint="@string/dialog_login_userid_hint"
		android:layout_marginBottom="@dimen/margin_normal"/>

	<EditText
		android:id="@+id/edit_password"
		android:layout_width="match_parent"
		android:layout_height="@dimen/btn_login_height"
		android:background="@drawable/btn_white_round_alpha6"
		android:textColor="@color/text_mb_color"
		android:textSize="@dimen/text_size_12"
		android:gravity="center"
		android:paddingStart="20dp"
		android:paddingEnd="2dp"
		android:lines="1"
		android:hint="@string/dialog_login_pw_hint"
		android:inputType="textPassword"
		android:layout_marginBottom="@dimen/margin_normal"/>

	<Button
		android:id="@+id/btn_login_id"
		android:layout_width="match_parent"
		android:layout_height="@dimen/btn_login_height"
		android:background="@drawable/btn_login"
		android:layout_marginBottom="@dimen/margin_normal"
		android:text="@string/login"
		android:textColor="@color/text_mb_color"
		android:textSize="@dimen/text_size_14" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="@dimen/btn_login_height"
		android:gravity="center"
		android:text="@string/forgot_pass"
		android:textSize="@dimen/text_size_14"
		android:textColor="@android:color/white" />

</LinearLayout>
