<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/dialog_password" 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:baselineAligned="false">
	<LinearLayout
		android:layout_width="@dimen/dialog_small_width"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:background="@drawable/round_bg_white">

		<TextView
			android:id="@+id/txt_password_title_id"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/dialog_password_title"
			android:textColor="@color/black_color"
			android:textStyle="bold"
			android:textSize="@dimen/text_size_14"
			android:padding="10dp"
			android:gravity="center_horizontal"/>

		<LinearLayout
			style="@style/choco_send_info_row"
			android:layout_marginStart="20dp"
			android:layout_marginEnd="20dp"
			android:layout_marginTop="20dp"
			android:layout_marginBottom="20dp">
			<ImageView
				style="@style/layout_ww"
				android:background="@drawable/ic_lock"
				android:contentDescription="@string/hello_world"/>
			<RelativeLayout
				style="@style/layout_mm"
				android:layout_marginStart="10dp">
				<EditText
					style="@style/layout_ww"
					android:id="@+id/editPassword"
					android:lines="1"
					android:background="@null"
					android:textColor="@color/black_color"
					android:textSize="@dimen/text_size_12"
					android:layout_alignParentBottom="true"
					android:inputType="textPassword"
					android:hint="@string/password_input_hint"/>
				<View style="@style/splite_line_gray"
					android:layout_alignParentBottom="true"/>
			</RelativeLayout>
		</LinearLayout>

		<LinearLayout
			style="@style/layout_mw"
			android:padding="@dimen/margin_normal">
            <Button
                android:id="@+id/btn_select_ok"
                android:layout_width="0dp"
                android:layout_height="@dimen/item_ex_small_height"
                android:layout_weight="1"
                android:background="@drawable/round_bg_orange"
                android:gravity="center"
                android:textSize="@dimen/text_size_12"
                android:text="@string/btn_confrim"
                android:textColor="@color/gray_5f"/>
			<View
				android:layout_width="3dp"
				android:layout_height="match_parent"/>
			<Button
				android:id="@+id/btn_select_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/item_ex_small_height"
                android:layout_weight="1"
                android:background="@drawable/round_bg_no_border_gray"
                android:gravity="center"
                android:textSize="@dimen/text_size_12"
				android:text="@string/btn_cancel"
				android:textColor="@color/gray_5f"/>
		</LinearLayout>
	</LinearLayout>

</LinearLayout>
